# gesture-control-human-avatar

./: .env.example  .gitignore  LICENSE  README.md  api.py  app.py  environment.yml  gradio_app.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: camera.yaml  gesture.yaml  gesture_3d_body_estimator_README.md  model.yaml  segmentation.yaml
data/raw_captures/: capture_20260517_181437_ce2eff_metadata.json  capture_20260517_182001_8cc863_metadata.json  capture_20260517_182006_d5f092_metadata.json
outputs/features/: bmi_estimation.json  body_features.json  body_landmarks.json
outputs/raw_captures/: capture_20260517_182745_e7a9b5_metadata.json  capture_20260517_183149_3a36f9_metadata.json
outputs/reports/: report.html
src/: __init__.py
src/bmi_estimation/: __init__.py  bmi_estimator.py  train_bmi_model.py
src/camera/: __init__.py  webcam.py
src/capture/: __init__.py  image_capture.py
src/gesture/: __init__.py  thumbs_up_detector.py
src/pose/: __init__.py  body_features.py  landmark_extractor.py
src/reconstruction/: __init__.py  body_reconstructor.py
src/segmentation/: __init__.py  human_segmenter.py  mask_refiner.py
src/utils/: __init__.py  config.py  logger.py  quality_check.py
src/visualization/: draw_utils.py  report_generator.py
tests/: test_bmi.py  test_capture.py  test_features.py  test_gesture.py  test_quality.py  test_reconstruction.py
